geändert *.css, *.php - fixed CSS Layout Bugs

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,19 +1,41 @@
 body {
-    padding-top: 70px;
-    margin-bottom: 90px;
-    padding-bottom: 100px;
+
 }
 
-.borderRight {
-	border-right: 1px solid black;
+html {
+    overflow-y: scroll;
 }
 
-.border {
-	border: 1px solid black;
-	padding: 10px;
+#footer {
+    padding-bottom: 20px;
+    padding-top: 20px;
+    position: fixed;
+    height: 80px;
+    bottom: 0px;
+
+    color: gray;
+    border-top: 1px black solid;
+    background: url(/pimcore/static/img/background.png);
+}
+
+#navbar {
+    position: fixed;
+    height: 50px;
+    top: 0px;
+
+    color: gray;
+    border-bottom: 1px black solid;
+    background: url(/pimcore/static/img/background.png);
+}
+
+#container {
+    padding-top: 60px;
+    padding-bottom: 90px;
+    left: 50px;
 }
 
 .viewSwitchingDialog {
+    border-radius: 5px;
     position: absolute;
     left: 0px;
     top: 0px;
@@ -30,10 +52,6 @@ body {
     background-color: #fff;
     border: 1px solid #000;
     padding: 15px;
-}
-
-body {
-    padding-bottom: 70px;   
 }
 
 
